file explorer: prevent long filenames from wrapping

--- a/SD/wifi/file-explorer/file-explorer.css
+++ b/SD/wifi/file-explorer/file-explorer.css
@@ -51,6 +51,7 @@
 
   .css-treeview span {
     cursor: pointer;
+    white-space: nowrap;
   }
 
   .css-treeview span:hover {
